fix: disable horizontal scroll

--- a/web3-kaist-fe/src/styles/globals.css
+++ b/web3-kaist-fe/src/styles/globals.css
@@ -21,7 +21,6 @@ input[type="number"] {
 * {
   font-family: "Comfortaa";
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 html {
